--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
-    "react-select": "^2.0.0"
+    "react-select": "^2.0.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
